# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  docker-compose.yml  install.sh  main.py  pyproject.toml
.docker/: entrypoint.sh
api/: __init__.py
api/auth/: auth.py
api/auth/request/: auth.py
api/auth/response/: auth.py
api/home/: home.py
api/user/v1/: user.py
api/user/v1/request/: user.py
api/user/v1/response/: user.py
app/: __init__.py  container.py  server.py
app/auth/application/dto/: __init__.py
app/auth/application/service/: jwt.py
app/auth/domain/usecase/: jwt.py
app/auth/schemas/: jwt.py
app/auth/services/: jwt.py
app/enums/: __init__.py  user.py  user_enum.py
app/models/: __init__.py  user.py  user_model.py
app/schemas/: __init__.py  user.py  user_schema.py
app/services/: user.py
app/usecases/: __init__.py  user.py  user_usecase.py
app/user/: container.py
app/user/schemas/: __init__.py  user.py
app/user/services/: user.py
app/views/: __init__.py  home.py  home_view.py
app/views/v1/: __init__.py  user.py  user_view.py
celery_task/: __init__.py
core/: config.py  exception.py
core/celery/: __init__.py  async_task.py  celery_worker.py
core/db/: __init__.py  create_session.py  session.py  standalone_session.py  transaction.py  transactional.py
core/db/mixins/: __init__.py  timestamp_mixin.py
core/dependencies/: __init__.py  auth_dependency.py
core/event/: __init__.py  base_event.py  event_handler.py  event_listener.py  exceptions.py
core/event/slack/: __init__.py  parameter.py  slack.py
core/exceptions/: __init__.py  base.py  error_code.py  token.py  token_exception.py  user.py  user_exception.py
core/fastapi/dependencies/: __init__.py  auth_dependency.py  logging.py  permission.py
core/fastapi/middlewares/: __init__.py  authentication.py  event.py  response_log.py  sqlalchemy.py
core/fastapi/schemas/: __init__.py  current_user.py
core/helpers/: cache.py  redis.py  token.py
core/helpers/cache/: __init__.py  cache_manager.py  cache_tag.py  cacheable.py  custom_key_maker.py  redis_backend.py
core/pydantic/: __init__.py  models.py
core/repository/: base.py  enum.py
core/utils/: __init__.py  case_converter.py  extract_token.py  token_helper.py
docker/: docker-compose.yml  init.sql
docker/api/: Dockerfile  startup.sh
docker/db/: Dockerfile
docker/redis/: Dockerfile
migrations/: env.py
migrations/versions/: 005ce6e94401_create_user_table.py  59628dea39ff_init.py
tests/: conftest.py
tests/core/exceptions/: test_base.py
tests/core/helpers/: test_token.py
tests/support/: test_db_coordinator.py  token.py  user_fixture.py
(+29 files in other folders)
