[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"

authors = [
    { name = "Sunn", email = "sunn@atumm.org" },
    { name = "Hide", email = "padocon@naver.com" },
]

requires-python = ">=3.8,<4.0"
dependencies = [
    "alembic<2.0.0,>=1.8.1",
    "SQLAlchemy[asyncio]<2.0.0,>=1.4.40",
    "PyJWT<3.0.0,>=2.4.0",
    "uvicorn<1.0.0,>=0.18.3",
    "fastapi<1.0.0,>=0.81.0",
    "celery<6.0.0,>=5.2.7",
    "gunicorn<21.0.0,>=20.1.0",
    "fastapi-event<1.0.0,>=0.1.3",
    "pythondi<2.0.0,>=1.2.4",
    "ujson<6.0.0,>=5.4.0",
    "aiomysql<1.0.0,>=0.1.1",
    "click<9.0.0,>=8.1.3",
    "greenlet==1.1.3",
    "redis<5.0.0,>=4.3.4",
]

[project.urls]


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "behave<2.0.0,>=1.2.6",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
